--- a/src/MyChessReact/src/App.css
+++ b/src/MyChessReact/src/App.css
@@ -4,6 +4,11 @@
   color: #ffffff;
 }
 
+.App-link-image {
+  vertical-align: middle;
+}
+
 .App-link {
   color: #ffffff;
+  text-decoration: none;
 }
