--- a/src/MyChessReact/src/index.css
+++ b/src/MyChessReact/src/index.css
@@ -3,4 +3,5 @@ body {
   font-family: "Segoe UI";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #353535;
 }
