--- a/src/MyChessReact/src/pages/Home.css
+++ b/src/MyChessReact/src/pages/Home.css
@@ -4,11 +4,10 @@
 }
 
 .Home-header {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   font-size: calc(10px + 2vmin);
   color: white;
 }
