--- a/src/MyChessReact/src/App.css
+++ b/src/MyChessReact/src/App.css
@@ -15,3 +15,16 @@
 .App-auth {
   float: right;
 }
+
+.App-privacy-container {
+  position: relative;
+}
+
+.App-privacy {
+  color: #ffffff;
+  position: fixed;
+  text-decoration: none;
+  bottom: 0; 
+  width: 0%;
+  margin-bottom: 25px;
+}
