--- a/src/MyChessReact/src/App.css
+++ b/src/MyChessReact/src/App.css
@@ -28,3 +28,11 @@
   width: 0%;
   margin-bottom: 25px;
 }
+
+button {
+  color: white;
+  background-color: gray;
+  font-size: medium;
+  padding: 5px;
+  margin: 10px;
+}
