--- a/src/MyChessReact/src/pages/Play.css
+++ b/src/MyChessReact/src/pages/Play.css
@@ -8,6 +8,14 @@
   color: white;
 }
 
+.Play-Form {
+  display: none;
+  padding: 10px;
+  text-align: left;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
 #table-game {
     margin: 0;
     border-spacing: 0;
