Add navigation to friends page

--- a/src/MyChessReact/src/pages/Settings.css
+++ b/src/MyChessReact/src/pages/Settings.css
@@ -7,3 +7,9 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+.Settings-link {
+  color: #ffffff;
+  text-decoration: none;
+  margin-top: 25px;
+}
