Update add friend ui styles

--- a/src/MyChessReact/src/App.css
+++ b/src/MyChessReact/src/App.css
@@ -36,3 +36,11 @@ button {
   padding: 5px;
   margin: 10px;
 }
+
+input,
+select,
+textarea {
+  font-size: medium;
+  padding: 5px;
+  margin: 10px;
+}
