Add helper texts

--- a/src/MyChessReact/src/components/FriendList.css
+++ b/src/MyChessReact/src/components/FriendList.css
@@ -7,8 +7,13 @@
 }
 
 .FriendList-AddFriend { 
-  font-size: 16pt;
+  font-size: 18pt;
 }
+
+.FriendList-AddFriendSubText { 
+  font-size: 12pt;
+}
+
 
 .FriendList-AddFriendError { 
   font-size: 16pt;
