--- a/src/MyChessReact/src/App.css
+++ b/src/MyChessReact/src/App.css
@@ -1,19 +1,30 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
   color: #ffffff;
 }
 
-.App-link-image {
-  margin-top: 5px;
-  margin-left: 10px;
+.App-header-container {
+  /* padding: 25px; */
+  width: 100%;
+  height: 50px;
 }
 
-.App-link {
-  float: left;
+.App-logo {
+  margin-top: 5px;
+  margin-left: 30px;
 }
 
 .App-auth {
   float: right;
+}
+
+.title {
+  height: 10vmin;
+  font-size: calc(14px + 2vmin);
+  color: white;
+  text-align: center;
+  width: 100%;
+  margin: 20px;
 }
 
 .App-footer-container {
