--- a/src/MyChessReact/src/components/GameList.css
+++ b/src/MyChessReact/src/components/GameList.css
@@ -6,7 +6,7 @@
   color: #ffffff;
 }
 
-.template-1 { width: 30%; }
+.template-1 { width: 40%; }
 
 [class*="template-"] {
   float: left;
@@ -29,11 +29,11 @@
     text-overflow: ellipsis;
     overflow-wrap: break-word;
     overflow: hidden;
-    height: 100px;
+    height: 50%;
 }
 
 .opponentTemplate {
-    margin: 10px;
+    /* margin: 10px; */
     text-align: right;
     font-size: 12pt;
     color: #959595;
@@ -57,6 +57,6 @@
 
 @media only screen and (max-width: 768px) {
   [class*="template-"] {
-    width: 95%;
+    width: 85%;
   }
 }
