--- a/src/MyChessReact/src/pages/SettingsPage.css
+++ b/src/MyChessReact/src/pages/SettingsPage.css
@@ -1,17 +1,13 @@
 .Settings-header {
   min-height: 10vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .Settings-link {
-  color: #ffffff;
   text-decoration: none;
+  color: white;
   margin-top: 25px;
+  font-size: calc(12px + 2vmin);
 }
 
 .Settings-Text { 
@@ -26,4 +22,10 @@
   font-size: 10pt;
   width: 300px;
   background-color: lightgray;
+}
+
+.Settings-Container {
+  padding: 10px;
+  width: 100%;
+  text-align: center;
 }
