--- a/src/MyChessReact/src/App.css
+++ b/src/MyChessReact/src/App.css
@@ -3,14 +3,12 @@
 }
 
 .App-header-container {
-  /* padding: 25px; */
   width: 100%;
-  height: 50px;
+  height: 60px;
 }
 
 .App-logo {
-  margin-top: 5px;
-  margin-left: 30px;
+  padding: 10px;
 }
 
 .App-auth {
