--- a/src/MyChessReact/src/pages/PlayPage.css
+++ b/src/MyChessReact/src/pages/PlayPage.css
@@ -13,6 +13,13 @@
   color: white;
 }
 
+.Play-GameName { 
+  font-size: calc(12px + 2vmin);
+  padding: 5px;
+  margin: 10px;
+  width: 80%;
+}
+
 #table-game {
   margin-left: auto;
   margin-right: auto;
