--- a/src/MyChessReact/src/App.css
+++ b/src/MyChessReact/src/App.css
@@ -29,12 +29,10 @@
 }
 
 .App-footer-container {
-  position: fixed;
-  left: 0;
-  bottom: 0;
   width: 100%;
   color: white;
   text-align: center;
+  margin-top: 50px;
   margin-bottom: 10px;
 }
 
