Rename component auth to profile

--- a/src/MyChessReact/src/components/Profile.css
+++ b/src/MyChessReact/src/components/Profile.css
@@ -1,13 +1,13 @@
-.Auth {
+.Profile {
   margin-top: 5px;
   margin-right: 25px;
 }
 
-.Auth-link {
+.Profile-link {
   color: #ffffff;
   text-decoration: none;
 }
 
-.Auth-button {
+.Profile-button {
   margin-left: 10px;
 }
