--- a/src/MyChessReact/src/components/Profile.css
+++ b/src/MyChessReact/src/components/Profile.css
@@ -1,13 +1,20 @@
 .Profile {
-  margin-top: 5px;
-  margin-right: 25px;
+  padding: 5px;
+  margin-right: 15px;
+  text-align: center;
+  display: inline-block;
 }
 
 .Profile-link {
   color: #ffffff;
   text-decoration: none;
+  line-height: 45px;
+  height: 45px;
+  display: block;
+  text-align: center;
 }
 
 .Profile-button {
   margin-left: 10px;
+  margin: 5px;
 }
