Change player icon layout

--- a/src/MyChessReact/src/components/GameList.css
+++ b/src/MyChessReact/src/components/GameList.css
@@ -81,6 +81,10 @@
   height: 25px;
 }
 
+.opponentIconTemplate {
+  vertical-align: middle
+}
+
 .dateTemplate {
   text-align: right;
   font-size: 12pt;
