Add basic styling to front page

--- a/src/MyChess.Client/Shared/MainLayout.razor
+++ b/src/MyChess.Client/Shared/MainLayout.razor
@@ -1,20 +1,20 @@
 ﻿@inherits LayoutComponentBase
 
-<div className="App">
-	<div className="App-header-container">
-	<a href="/"><img src="/images/logo.svg" alt="My Chess" className="App-logo" /></a>
-	<div className="App-auth">
+<div class="App">
+	<div class="App-header-container">
+	<a href="/"><img src="/images/logo.svg" alt="My Chess" class="App-logo" /></a>
+	<div class="App-auth">
 		<Profile />
 	</div>
 	</div>
 
 	@Body
 
-	<footer className="App-footer-container">
-		<a href="/About" className="App-footer-link">About </a>
-		<span className="App-footer-link-separator">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
-		<a href="/privacy" className="App-footer-link">Privacy</a>
-		<span className="App-footer-link-separator">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
-		<a href="/play/local" className="App-footer-link">Play locally</a>
+	<footer class="App-footer-container">
+		<a href="/About" class="App-footer-link">About </a>
+		<span class="App-footer-link-separator">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
+		<a href="/privacy" class="App-footer-link">Privacy</a>
+		<span class="App-footer-link-separator">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
+		<a href="/play/local" class="App-footer-link">Play locally</a>
 	</footer>
 </div>
