Add cookie consent support

--- a/src/MyChess.Client/Shared/MainLayout.razor
+++ b/src/MyChess.Client/Shared/MainLayout.razor
@@ -17,4 +17,6 @@
 		<span class="App-footer-link-separator">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
 		<a href="/play/local" class="App-footer-link">Play locally</a>
 	</footer>
+
+	<CookieConsent />
 </div>
