Add backend client and game fetch logic

--- a/src/MyChess.Client/Pages/Index.razor
+++ b/src/MyChess.Client/Pages/Index.razor
@@ -3,9 +3,7 @@
 
 <AuthorizeView>
     <Authorized>
-		<div>
-			// TODO: GameList here
-		</div>
+		<GameList />
     </Authorized>
     <NotAuthorized>
 		<div>
