--- a/src/MyChess.Client/Pages/Settings.razor
+++ b/src/MyChess.Client/Pages/Settings.razor
@@ -19,11 +19,11 @@
 
 			Notifications<br />
 			<label class="toggle-switch-wrapper">
-				<InputCheckbox @onchange="HandleNotificationChange" @bind-Value="_isNotificationsEnabled" />
+				<InputCheckbox @onchange="HandleNotificationChange" @bind-Value="IsNotificationsEnabled" />
 				<span class="toggle-switch"></span>
 			</label>
 			<br />
-			@_notificationEnabledText
+			@NotificationText
 
 			<div class="title">
 				<button @onclick="Save"><span role="img" aria-label="OK">✅</span> Save</button>
