Add notification setting update to server

--- a/src/MyChess.Client/Pages/Settings.razor
+++ b/src/MyChess.Client/Pages/Settings.razor
@@ -19,7 +19,7 @@
 
 			Notifications<br />
 			<label class="toggle-switch-wrapper">
-				<InputCheckbox @onchange="HandleNotificationChange" @bind-Value="IsNotificationsEnabled" />
+				<InputCheckbox @bind-Value="IsNotificationsEnabled" />
 				<span class="toggle-switch"></span>
 			</label>
 			<br />
