Fix incorrect tag name for new game button

--- a/src/MyChess.Client/Shared/GameList.razor
+++ b/src/MyChess.Client/Shared/GameList.razor
@@ -37,7 +37,7 @@
 			}
 		</div>
 		<div class="subtitle">
-			Or <button @onClick="AddNewGame">add new</button> game.
+			Or <button @onclick="AddNewGame">add new</button> game.
 		</div>
 	}
 </div>
