Fix overall styling issues

--- a/src/MyChess.Client/Pages/Settings.razor
+++ b/src/MyChess.Client/Pages/Settings.razor
@@ -23,7 +23,7 @@
 				<span class="toggle-switch"></span>
 			</label>
 			<br />
-			@NotificationText
+			<span class="Settings-Error">@NotificationText</span>
 
 			<div class="title">
 				<button @onclick="Save"><span role="img" aria-label="OK">✅</span> Save</button>
