--- a/src/MyChess.Client/wwwroot/css/app.css
+++ b/src/MyChess.Client/wwwroot/css/app.css
@@ -10,6 +10,7 @@ body {
     /* Prevent pull to refresh */
     touch-action: manipulation;
     overscroll-behavior-y: contain;
+    color: white;
 }
 
 .welcome {
