Add simple canvas based board

--- a/src/MyChess.Client/Shared/ChessBoardView.razor
+++ b/src/MyChess.Client/Shared/ChessBoardView.razor
@@ -3,7 +3,8 @@
 
 <div id="status">&nbsp; @Status </div>
 <div id="error" class="Play-Error">@Error</div>
-<table id="table-game"><tbody></tbody></table>
+
+<canvas id="canvas" @ref="_canvas"></canvas>
 
 @if (ShowConfirmationDialog)
 {
