--- a/src/MyChess.Client/Pages/Play.razor.css
+++ b/src/MyChess.Client/Pages/Play.razor.css
@@ -114,3 +114,10 @@
 #table-game .lightCell.highlightMoveAvailable {
     background: rgb(0, 250, 0);
 }
+
+.game {
+    position: absolute;
+    display: table-cell;
+    width: 100%;
+    height: 100%;
+}
